my-vue-app/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app
spec:
  type: LoadBalancer
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
